[gd_scene load_steps=7 format=3 uid="uid://dktjfoar41ceu"]

[ext_resource type="Texture2D" uid="uid://bxr5f1evya50u" path="res://Assets/Images/DungeonRoomBackground.png" id="1_k8ln2"]
[ext_resource type="Script" path="res://Game Scenes/game.gd" id="1_v2p7b"]
[ext_resource type="Texture2D" uid="uid://bgulib037v3af" path="res://Assets/Images/DungeonRoomLightOverlay.png" id="2_37ubt"]
[ext_resource type="Texture2D" uid="uid://dnkhwospra37q" path="res://Assets/Images/orb.png" id="3_dfmax"]

[sub_resource type="SystemFont" id="SystemFont_ho0eh"]
font_names = PackedStringArray("Bodoni MT")

[sub_resource type="LabelSettings" id="LabelSettings_nm3xk"]
font = SubResource("SystemFont_ho0eh")
font_size = 30

[node name="Game" type="Node2D"]
script = ExtResource("1_v2p7b")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Room" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="Room"]
layout_mode = 0
offset_left = -480.0
offset_top = -360.0
offset_right = 480.0
offset_bottom = 360.0
texture = ExtResource("1_k8ln2")

[node name="ColorModulate" type="CanvasModulate" parent="Room/Background"]

[node name="DoorContainer" type="HBoxContainer" parent="Room"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -351.0
offset_top = -307.0
offset_right = 166.0
offset_bottom = -276.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 200

[node name="Orb" type="TextureButton" parent="Room"]
visible = false
layout_mode = 0
offset_left = -59.0
offset_top = 113.0
offset_right = 241.0
offset_bottom = 437.0
scale = Vector2(0.298918, 0.528075)
texture_normal = ExtResource("3_dfmax")

[node name="LightOverlay" type="PointLight2D" parent="Room"]
texture = ExtResource("2_37ubt")

[node name="PointsLabel" type="Label" parent="."]
offset_left = -474.0
offset_top = -354.0
offset_right = -357.0
offset_bottom = -317.0
text = "30 Points"
label_settings = SubResource("LabelSettings_nm3xk")

[connection signal="pressed" from="Room/Orb" to="." method="_on_orb_pressed"]
